<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/titulo1"
        android:textColor="@android:color/holo_purple"

        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvalor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtvalor1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/n1"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:autofillHints="num1"
        android:ems="10"
        android:hint="@string/nnum1"
        android:inputType="number"
        android:textColor="@android:color/holo_purple"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvalor1" />

    <TextView
        android:id="@+id/txtvalor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/Txtvalor2"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n1" />

    <EditText
        android:id="@+id/n2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:autofillHints="num2"
        android:ems="10"
        android:hint="@string/nnum2"
        android:inputType="number"
        android:textColor="@android:color/holo_purple"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvalor2" />

    <Button
        android:id="@+id/blsumar"
        android:layout_width="93dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:onClick="onclicksumar"
        android:text="@string/blsumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n2" />

    <TextView
        android:id="@+id/lbresultado"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:autofillHints="resultado"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n2" />

    <Button
        android:id="@+id/blresta"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:onClick="onclickresta"
        android:text="@string/blresta"
        app:layout_constraintStart_toEndOf="@+id/blsumar"
        app:layout_constraintTop_toBottomOf="@+id/lbresultado" />

    <Button
        android:id="@+id/blmulti"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="396dp"
        android:onClick="onclickmulti"
        android:text="@string/blmulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/blresta"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bldividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickdividir"
        android:text="@string/bldiv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blsumar" />

    <Button
        android:id="@+id/blpot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickelevar"
        android:text="@string/blpot"
        app:layout_constraintStart_toEndOf="@+id/bldividir"
        app:layout_constraintTop_toBottomOf="@+id/blresta" />

    <Button
        android:id="@+id/blpoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickelevarN"
        android:text="@string/blpoN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bldividir" />

    <Button
        android:id="@+id/blraiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickraiz"
        android:text="@string/blraiz"
        app:layout_constraintStart_toEndOf="@+id/blpoN"
        app:layout_constraintTop_toBottomOf="@+id/blpot" />

</androidx.constraintlayout.widget.ConstraintLayout>